--- a/css/style.css
+++ b/css/style.css
@@ -233,6 +233,7 @@ body {
     height: 100vh;
     width: 100%;
     background-color: var(--red);
+    background-attachment: fixed;
 }
 
 @keyframes kessy {
